<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    tools:context=".FragmentThree">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="center|top"
        android:text="@string/fragmentthree"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnFragThreeToFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|left"
        android:text="@string/btnFrag" />
    <Button
        android:id="@+id/btnFragThreeCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|right"
        android:text="@string/btnCancel" />
</FrameLayout>